# Platform_Workshops

./: README.md  readme.md
Step1_Workspace/: CMakeLists.txt  EigenAdd  HelloWorld  README.md  readme.md
Step1_Workspace/include/HelloWorld/: HelloWorld.hpp
Step1_Workspace/src/: HelloWorld.cpp  run_helloworld.cpp
Step1_Workspace/tests/: HelloWorldTest.cpp
Step2_Containerize/: README.md
Step3_Orchestrate/: README.md  compose.yaml
Step3_Orchestrate/launch/: talk_and_translate.py
Step3_Orchestrate/src/hello_world_talker/: package.xml  setup.cfg  setup.py
Step3_Orchestrate/src/hello_world_talker/hello_world_talker/: talker_node.py
Step3_Orchestrate/src/hello_world_translator/: CMakeLists.txt  package.xml
Step3_Orchestrate/src/hello_world_translator/include/hello_world_translator/: translator_node.hpp
Step3_Orchestrate/src/hello_world_translator/src/: main.cpp  translator_node.cpp
